# opti-bfm

./: .gitignore  README.md  exorl_download.sh  main.py  pyproject.toml
agents/: __init__.py  basic.py  optimistic.py  rl.py
dmc/: __init__.py  exorl.py
dmc/custom_dmc_tasks/: __init__.py  cheetah.py  cheetah.xml  hopper.py  hopper.xml  jaco.py  point_mass_maze.py  point_mass_maze_multi_goal.xml  point_mass_maze_reach_bottom_left.xml  point_mass_maze_reach_bottom_right.xml  point_mass_maze_reach_top_left.xml  point_mass_maze_reach_top_right.xml  quadruped.py  quadruped.xml  walker.py  walker.xml
models/: __init__.py  fb.py
scripts/: experience_datasets.py
utils/: blr.py  datasets.py  defs.py  env_utils.py  evaluation.py  flax_utils.py  log_utils.py
